tdf#151376 framework: fix calling in-document macros with reused frames

The bugdoc has a macro in it, and after closing the document -> start
center -> opening it again, you could no longer trigger the macro by
clicking on the URL field in the Calc cell.

The problem is that we cache protocol handler instances since
3f768cddd28a2f04eb1ffa30bed4474deb6fbfc4 (framework: avoid re-creating
protocol handler instances all the time, 2022-05-02) in frames, but we
failed to invalidate this cache when the component of the frame changes.

Fix the problem by clearing the cache in XFrameImpl::setComponent(),
which gets called in this somewhat rare case when a frame gets reused to
host a different component.

[ No testcase, I'm not sure how to close a document without disposing
its XFrame from code. ]

(cherry picked from commit 4bcf6d9c905e7b5558ee8d9f7f616ce61eadb8f8)

Change-Id: I73ee83ec017f476803010cbf9e514315fc797371
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/144036
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>