framework/source/services/frame.cxx
@@ -1473,6 +1473,17 @@ sal_Bool SAL_CALL XFrameImpl::setComponent(const css::uno::Reference< css::awt::
         {
             SolarMutexGuard aWriteLock;
             m_xController = nullptr;
+
+            auto pInterceptionHelper = dynamic_cast<InterceptionHelper*>(m_xDispatchHelper.get());
+            if (pInterceptionHelper)
+            {
+                css::uno::Reference<css::frame::XDispatchProvider> xDispatchProvider = pInterceptionHelper->GetSlave();
+                auto pDispatchProvider = dynamic_cast<DispatchProvider*>(xDispatchProvider.get());
+                if (pDispatchProvider)
+                {
+                    pDispatchProvider->ClearProtocolHandlers();
+                }
+            }
         }
         /* } SAFE */
 
